# GServer

./: .gitignore  CMakeLists.txt
.VSCodeCounter/2025-08-03_00-24-01/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2025-08-03_00-24-31/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2025-08-07_16-38-29/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.git_corrupt_backup/: ORIG_HEAD  config  index
.git_corrupt_backup/logs/: HEAD
.git_corrupt_backup/logs/refs/heads/: main
.git_corrupt_backup/logs/refs/remotes/origin/: main
.git_corrupt_backup/objects/pack/: tmp_pack_IxD5sy  tmp_pack_ka8d0L
.git_corrupt_backup/refs/remotes/origin/: main
config/: log.yml
doc/: IOSocket.md  config.drawio  config.md  coroutine.md  http.md  iomanager.md  log.drawio  log.md  thread.md  timer.md
src/: address.cpp  address.h  agent.h  bytearray.cpp  bytearray.h  config.cpp  config.h  coroutine.cpp  coroutine.h  endian.hpp  fd_manager.cpp  fd_manager.h  hook.cpp  hook.h  iomanager.cpp  iomanager.h  log.cpp  log.h  macro.h  noncopyable.h  scheduler.cpp  scheduler.h  singleton.h  socket.cpp  socket.h  socket_stream.cpp  socket_stream.h  stream.cpp  stream.h  tcp_server.cpp  tcp_server.h  thread.cpp  thread.h  timer.cpp  timer.h  utils.cpp  utils.h
src/http/: http.cpp  http.h  http_parser.cpp  http_parser.h  http_server.cpp  http_server.h  http_session.cpp  http_session.h  servlet.cpp  servlet.h  tcp_server.cpp  tcp_server.h
test/: test_address.cpp  test_config.cpp  test_coroutine.cpp  test_hook.cpp  test_http.cpp  test_http_server.cpp  test_iomanager.cpp  test_iomanager2.cpp  test_log.cpp  test_scheduler.cpp  test_socket.cpp  test_tcp_server.cpp  test_thread.cpp  test_util.cpp
